<resources>
    <string name="app_name">ADScan</string>
    <string name="title_activity_photo_directives">PhotoDirectivesActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--
    PhotoDirectivesActivity strings
    -->
    <string name="et_nomFichier">Nom du fichier</string>
    <string name="tv_nomFichier">La date du jour nommera le fichier si ce champ est laissé vide</string>
    <string name="et_nomDossier">Nom du dossier</string>
    <string name="tv_nomDossier">Dossier</string>
    <string name="cb_date">+ date</string>
    <string name="cb_folder">+ dossier</string>
    <string name="btn_valider">Valider</string>

    <string name="tv_rienAAfficher">Aucun dossier à afficher</string>
</resources>
